Refine regression results

--- a/research_experience/index.html
+++ b/research_experience/index.html
@@ -592,7 +592,7 @@ Covariance Type:            nonrobust
 ===============================================================================
                   coef    std err          t      P&gt;|t|      [0.025      0.975]
 -------------------------------------------------------------------------------
-const           0.0448      0.020      2.254    0.027*       0.005       0.084
+const           0.0448      0.020      2.254     0.027*       0.005       0.084
 q1_ratio        0.1729      0.047      3.643   0.001***       0.078       0.268
 gbpusd_o_d     -3.5446      0.638     -5.554   0.000***      -4.818      -2.272
 interaction    -6.6575      1.594     -4.177   0.000***      -9.837      -3.478
@@ -603,7 +603,7 @@ Skew:                           0.122   Prob(JB):                        0.913
 Kurtosis:                       3.021   Cond. No.                         114.
 ==============================================================================
 </code></pre></div>
-<p>The regression results indicate a <strong>significant positive relationship</strong> between <code>q1_ratio</code> and the change in UK ten-year government bond yields (<code>10.0_n_d</code>). Specifically, a higher <code>q1_ratio</code> — implying <strong>stronger public expectation of an increasing budget deficit</strong> — is associated with an <strong>increase in bond yields</strong>. The coefficient for <code>q1_ratio</code> is positive and statistically significant at the <strong>0.1% level</strong>. Additionally, the negative coefficients for the change in the GBP/USD exchange rate (<code>gbpusd_o_d</code>) and the interaction term suggest that currency appreciation and its interplay with budget expectations also influence bond yields.</p>
+<p>The regression results indicate a <strong>significant positive relationship</strong> between <code>q1_ratio</code> and the change in UK ten-year government bond yields (<code>10.0_n_d</code>). Specifically, a higher <code>q1_ratio</code> — implying <strong>stronger public expectation of an increasing budget deficit</strong> — is associated with an <strong>increase in bond yields</strong>. The coefficient for <code>q1_ratio</code> is positive and statistically significant at the <strong>0.1% level</strong>. Additionally, the negative coefficients for the change in the GBP/USD exchange rate (<code>gbpusd_o_d</code>) and the interaction term suggest that currency appreciation and its interplay with budget expectations also influence bond yields. The regression model explains approximately <strong>47% of the variance</strong> (<code>R2 score</code>) in the change in bond yields, as indicated by the R-squared value.</p>
 <p>These preliminary findings support the hypothesis that anticipated fiscal expansions lead investors to demand higher yields on government bonds, reflecting the pricing-in of budget deficit expectations into asset prices.</p></div>
 
 
