Update calibration results

--- a/projects/index.html
+++ b/projects/index.html
@@ -626,7 +626,7 @@
 \end{aligned}
 \]</div>
 <h3 id="plot">Plot</h3>
-<p>The calibration resulted in an around 7% loss in function value.</p>
+<p>The model results in around 7% in overall function value loss, but the model's performance <strong>improves with longer maturities</strong>. This indicates that our calibration is particularly <strong>effective for pricing long-term interest rate derivatives</strong>.</p>
 <p><img align="left" alt="Hull-White Plot" src="../assets/plots/hw_plot.png"></p>
 <h2 id="automatic-cover-letter-generator"><a href="https://github.com/fredhli/Auto_CL_Generator"><strong>Automatic Cover Letter Generator</strong></a></h2>
 <p>This project focuses on creating an automatic cover letter generator using natural language processing techniques.</p>
