--- a/cv/index.html
+++ b/cv/index.html
@@ -486,11 +486,10 @@
 
 
 <div><h1 id="curriculum-vitae"><strong>Curriculum Vitae</strong></h1>
-<iframe src="/cv.html" width="100%" height="1320px" style="border:none;"></iframe>
-
 <p><span style="font-size: smaller;">
 If not loaded properly, you can also download a PDF copy of my resume <a href="../assets/resume.pdf">here</a>.
-</span></p></div>
+</span></p>
+<iframe src="/assets/resume.pdf" width="100%" height="1320px" style="border:none;"></iframe></div>
 
 
 
