--- a/research_experience/index.html
+++ b/research_experience/index.html
@@ -558,7 +558,7 @@
 <div><h1 id="research-experience"><strong>Research Experience</strong></h1>
 <p>Here is a summary of my contributions to ongoing research projects.</p>
 <h2 id="text-based-analysis-using-novel-dataset"><strong>Text-based Analysis using Novel Dataset</strong></h2>
-<p>We used a novel dataset of <strong>U.S. congressional hearings</strong>. After rigorously addressing <em>OCR reading errors</em> and <a href="text-based-codes.md">mapping database speakers</a> to real-world congressmen, our next step is to train a <strong>BERT topic model</strong> to condense hundreds of thousands of speeches in the dataset into <em>500 topics</em>. </p>
+<p>We used a novel dataset of <strong>U.S. congressional hearings</strong>. After rigorously addressing <em>OCR reading errors</em> and <a href="../sample_codes/cleanse_tb/">mapping database speakers</a> to real-world congressmen, our next step is to train a <strong>BERT topic model</strong> to condense hundreds of thousands of speeches in the dataset into <em>500 topics</em>. </p>
 <h3 id="plot-1"><strong>Plot 1</strong></h3>
 <p>Following fine-tuning (including <em>embedding pretraining</em>, <em>vectorizer model</em>, <em>UMAP model</em>, <em>HDBSCAN model</em>, <em>c-TF-IDF model</em>, and <em>representation model</em>), this is an interactive map of the <strong>top 20 most frequent topics</strong>. Feel free to explore the data:</p>
 <iframe src="/assets/plots/topic_500.html" width="100%" height="1000px" style="border:none;"></iframe>
