--- a/sample_codes/cleanse_tb/index.html
+++ b/sample_codes/cleanse_tb/index.html
@@ -544,6 +544,7 @@
 
 
 <div><h1 id="sample-code-1"><strong>Sample Code 1</strong></h1>
+<p><a href="../">Return to Sample Codes</a></p>
 <h2 id="text-based-analysis-of-novel-dataset"><strong>Text-based Analysis of Novel Dataset</strong></h2>
 <p>This Python script is a comprehensive text analysis tool designed for processing and analyzing congressional hearing transcripts. It combines multiple natural language processing techniques, including sentiment analysis, OCR error correction, speaker identification, and committee member matching. The script utilizes various libraries such as spaCy, pandas, and the Hugging Face transformers library to handle tasks ranging from basic text preprocessing to advanced entity recognition. Key features include the ability to parse complex document structures, match speakers with committee members, correct OCR errors, and analyze sentiment in congressional discussions.</p>
 <h2 id="code"><strong>Code</strong></h2>
@@ -2063,7 +2064,8 @@
             <span class="n">short_word_count</span> <span class="o">+=</span> <span class="mi">1</span>
 
     <span class="k">return</span> <span class="nb">len</span><span class="p">(</span><span class="n">unknown_words</span><span class="p">),</span> <span class="n">total_count</span><span class="p">,</span> <span class="n">short_word_count</span>
-</code></pre></div></div>
+</code></pre></div>
+<p><a href="../">Return to Sample Codes</a></p></div>
 
 
 
@@ -2086,7 +2088,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date">November 2, 2024</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date">November 7, 2024</span>
   </span>
 
     
