Remove outdated CV PDF and update links in HTML to point to the new location

--- a/cv/index.html
+++ b/cv/index.html
@@ -561,9 +561,9 @@
 
 <div><h1 id="curriculum-vitae"><strong>Curriculum Vitae</strong></h1>
 <p><span style="font-size: smaller;">
-If not loaded properly, you can also download a PDF copy of my CV <a href="/CV.pdf">here</a>.
+If not loaded properly, you can also download a PDF copy of my CV <a href="/assets/CV.pdf">here</a>.
 </span></p>
-<iframe src="/CV.pdf" width="100%" height="1320px" style="border:none;"></iframe></div>
+<iframe src="/assets/CV.pdf" width="100%" height="1320px" style="border:none;"></iframe></div>
 
 
 
