--- a/cv/index.html
+++ b/cv/index.html
@@ -563,7 +563,7 @@
 <p><span style="font-size: smaller;">
 If not loaded properly, you can also download a PDF copy of my CV <a href="/assets/cv.pdf">here</a>.
 </span></p>
-<iframe src="/docs/assets/cv.pdf" width="100%" height="1320px" style="border:none;"></iframe></div>
+<iframe src="/assets/cv.pdf" width="100%" height="1320px" style="border:none;"></iframe></div>
 
 
 
