Add ATS Score Estimation feature and update CV content; refresh sitemap lastmod dates

--- a/projects/index.html
+++ b/projects/index.html
@@ -719,6 +719,7 @@
 <ul>
 <li><strong>CV Management</strong>: Store and manage multiple versions of your CV.</li>
 <li><strong>JD Analysis</strong>: Extract key requirements and skills from job descriptions.</li>
+<li><strong>ATS Score Estimation</strong>: Estimates the Applicant Tracking System (ATS) score of your CV against the job description.</li>
 <li><strong>Company Address Search Up</strong>: Use Google Map API to automate the company address hunt process.</li>
 <li><strong>CV-JD Matching</strong>: AI-powered matching of CV versions to job requirements.</li>
 <li><strong>Cover Letter Generation</strong>: Automated creation of personalized cover letters using Notion API.</li>
